force-app/main/default/objects/CBK_AuditLogSetting__c/CBK_AuditLogSetting__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Almacén de configuración de las distintos tipos de funcionalidades auditables en registros de auditoría.</description>
    <label>Audit Log Setting</label>
</CustomObject>