force-app/main/default/objects/CBK_AuditLogSetting__c/fields/CBK_Activo__c.field-meta.xml
<CustomField>
    <fullName>CBK_Activo__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicador de si el registro de la operación auditada se ha de continuar guardando.</description>
    <label>Activo</label>
    <type>Checkbox</type>
</CustomField>