force-app/main/default/objects/CBK_AuditLogSetting__c/fields/CBK_Obligatoriedad__c.field-meta.xml
<CustomField>
    <fullName>CBK_Obligatoriedad__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicador de si la operación requiere el registro de auditoría para continuar la operación. En caso de que se marque como verdadero, si se produce un error el sistema lanzará una excepción; en caso contrario, se continuará la ejecución sin excepción aunque el registro de auditoría falle.</description>
    <label>Obligatoriedad</label>
    <type>Checkbox</type>
</CustomField>