force-app/main/default/objects/CBK_AuditLogSetting__c/fields/CBK_RTAudit__c.field-meta.xml
<CustomField>
    <fullName>CBK_RTAudit__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicador de si la operación requiere el registro en Tiempo Real (en caso de que no se marque esta opción se registrará de forma asincrona).</description>
    <label>Auditoria en tiempo real</label>
    <type>Checkbox</type>
</CustomField>